# quarkd

./: .editorconfig  README.md  meson.build
include/: init.h
include/modules/: getty.h  mount.h
include/utils/: logging.h  panic.h
scripts/: build.sh  grabber.sh
src/: init.c
src/modules/: getty.c  mount.c
src/utils/: logging.c
